Correção final do site

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 color: black;
             }
             .result img {
-              display: block;
-              max-width: 100%;
-              border-radius: 10px;
-              border: 1px solid #ddd;
+                display: block;
+                max-width: 100%;
+                border-radius: 10px;
+                border: 1px solid #ddd;
             }
         </style>
     </head>
@@ -39,14 +39,14 @@
         <div class="container">
             <div class="box result">
                 <h2>identificador de gato ou cachorro</h2>
-                <img src="meu_projeto\static\resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
-                <img src="meu_projeto\static\resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
+                <img src="meu_projeto/static/resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
+                <img src="meu_projeto/static/resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo da velha</h2>
-                <img src="meu_projeto\static\jogo_da_velha.gif" alt="Resultado">
+                <img src="meu_projeto/static/jogo_da_velha.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
@@ -58,19 +58,19 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-                <img src="meu_projeto\static\deteccao_sono.gif" alt="Resultado">
+                <img src="meu_projeto/static/deteccao_sono.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo Flappy Bird por IA</h2>
-                <img src="meu_projeto\static\Flappy_BirdIA.gif" alt="Resultado">
+                <img src="meu_projeto/static/Flappy_BirdIA.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Detecções de carros</h2>
-                <img src="meu_projeto\static\deteccao_de_carro_V2.gif" alt="Resultado">
+                <img src="meu_projeto/static/deteccao_de_carro_V2.gif" alt="Resultado">
             </div>
         </div>
     </body>
