--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-                <img src="static/deteccao_sono.gif" alt="Resultado">
+                <img src="meu_projeto/static/deteccao_sono.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecções de carros</h2>
-                <img src="meu_projeto/static/deteccao_de_carro_V2.gif" alt="Resultado">
+                <img src="meu_projeto\static\deteccao_de_carro_V2.gif" alt="Resultado">
             </div>
         </div>
     </body>
