Corrigindo os caminhos das imagens e GIFs

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <div class="container">
             <div class="box result">
                 <h2>identificador de gato ou cachorro</h2>
-                <img src="meu_projeto/static/resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
-                <img src="meu_projeto/static/resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
+                <img src="static/resultado1_projeto_dog_or_cat.png" alt="Primeiro resultado">
+                <img src="static/resultado2_projeto_dog_or_cat.png" alt="Segundo resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo da velha</h2>
-                <img src="meu_projeto/static/jogo_da_velha.gif" alt="Resultado">
+                <img src="static/jogo_da_velha.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
