Corrigindo caminhos de arquivos

--- a/index.html
+++ b/index.html
@@ -58,21 +58,13 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-<<<<<<< HEAD
-                <img src="static/deteccao_sono.gif" alt="Resultado">
-=======
-                <img src="static/deteccao_sono_otimizado.gif" alt="Resultado">
->>>>>>> aa24e1a (Adiciona os GIFs otimizados à pasta static)
+                <img src="static/deteccao_sono.mp4" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo Flappy Bird por IA</h2>
-<<<<<<< HEAD
-                <img src="static/Flappy_BirdIA.gif" alt="Resultado">
-=======
-                <img src="static/flappy_bird_otimizado_otimizado.gif" alt="Resultado">
->>>>>>> aa24e1a (Adiciona os GIFs otimizados à pasta static)
+                <img src="static\flappy_bird.mp4" alt="Resultado">
             </div>
         </div>
         <div class="container">
