--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="box result">
                 <h2>Jogo Flappy Bird por IA</h2>
-                <img src="static\flappy_bird.gif" alt="Resultado">
+                <img src="static/flappy_bird_otimizado.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
