Substituindo GIF Flappy Bird por versão otimizada

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="box result">
                 <h2>Jogo da velha</h2>
-                <img src="static/jogo_da_velha.gif" alt="Resultado">
+                <img src="static\jogo_da_velha.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
@@ -58,19 +58,19 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-                <img src="static/deteccao_sono.gif" alt="Resultado">
+                <img src="static\deteccao_sono.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo Flappy Bird por IA</h2>
-                <img src="static/flappy_bird_otimizado.gif" alt="Resultado">
+                <img src="static\flappy_bird_otimizado.gif" alt="Resultado">
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Detecções de carros</h2>
-                <img src="static/deteccao_de_carro.gif" alt="Resultado">
+                <img src="static\deteccao_de_carro.gif" alt="Resultado">
             </div>
         </div>
     </body>
