--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div class="container">
             <div class="box result">
                 <h2>Jogo da velha</h2>
-                <video> <source src="static/jogo_da_velha.mp4" type="video/mp4"></video>
+                <video controls autoplay loop muted>
+                    <source src="static/jogo_da_velha.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
         <div class="container">
@@ -58,19 +60,25 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecção de sono</h2>
-                <video> <source src="static/deteccao_sono.mp4" type="video/mp4"></video>
+                <video controls autoplay loop muted>
+                    <source src="static/deteccao_sono.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Jogo Flappy Bird por IA</h2>
-                <video> <source src="static/flappy_bird.mp4" type="video/mp4"></video>
+                <video controls autoplay loop muted>
+                    <source src="static/flappy_bird.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
         <div class="container">
             <div class="box result">
                 <h2>Detecções de carros</h2>
-                <video> <source src="static/deteccao_de_carro.mp4" type="video/mp4"></video>
+                <video controls autoplay loop muted>
+                    <source src="static/deteccao_de_carro.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
     </body>
