Modificado o código html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </head>
     <body>
         <div align="center" dir="auto">
-            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&amp;weight=500&amp;size=22&amp;pause=1000&amp;color=0000FF&amp;center=true&amp;vCenter=true&amp;random=false&amp;width=640&amp;lines=My+name+is+Pedro+Paulo,welcome+to+my+profile;I+am+going+to+graduate+from+Impacta;I+have+various+diplomas+from+Alura" alt="Typing SVG" style="max-width: 100%;">
+            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&amp;weight=500&amp;size=22&amp;pause=1000&amp;color=0000FF&amp;center=true&amp;vCenter=true&amp;random=false&amp;width=640&amp;lines=My+name+is+Pedro+Paulo,welcome+to+my+profile;I+am+going+to+graduate+from+Impacta;I+have+various+diplomas+from+Alura;https://github.com/pedro-caldeira1903/cientista_de_dado" alt="Typing SVG" style="max-width: 100%;">
         </div>
         <div class="container">
             <div class="box result">
