--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="box result">
                 <h2>Detecções de carros</h2>
-                <video controls autoplay loop muted>
+                <video controls autoplay loop muted width="420">
                     <source src="static/deteccao_de_carro.mp4" type="video/mp4">
                 </video>
             </div>
